# swepruner-structured-training

./: .gitignore  README.md  pyproject.toml
config/: confidence.toml  default.toml  eval_repo_blacklist.txt  real_first_phase.toml  swepruner_mapping.json
evaluation/: README.md  __init__.py  export_official.py  http_client.py  prune_smoke.py
evaluation/scripts/: create_eval_env.sh  prepare_official_tools.sh  start_pruner.sh  stop_pruner.sh
scripts/: build_full.sh  build_real_first_phase.sh  build_small.sh  inspect_samples.sh  python_runtime.sh
src/swepruner_dataset_builder/: __init__.py  api_cache.py  api_provider.py  ast_blocks.py  call_graph.py  cli.py  config.py  deduplication.py  def_use.py  exporters.py  hard_negatives.py  io_utils.py  issue_generation.py  labeling.py  leakage_check.py  patch_parser.py  pipeline.py  python_parser.py  real_data.py  reporting.py  review.py  sampling.py  schemas.py  splitting.py  symbol_table.py  task_adapters.py  traceback_parser.py  validation.py
swepruner_dataset_builder/: __init__.py
tests/: test_api_cache.py  test_issue_leakage.py  test_labeling_sampling.py  test_patch_parser.py  test_pipeline.py  test_python_analysis.py  test_split_export_validation.py
training/: README.md  __init__.py  checkpoint.py  config.py  data.py  losses.py  model.py  requirements-runtime.txt  requirements-training.txt  screen.py  train.py
training/configs/: m1_data_only.json  m2_structural.json
training/scripts/: create_server_conda.sh  download_assets.sh  download_wheelhouse.sh  install_offline_conda.sh  train_ablation.sh  train_m1.sh  (+3 more)
