[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "swepruner-dataset-builder"
version = "0.1.0"
description = "Structured Python dataset builder for SWE-Pruner-compatible line pruning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
swepruner-dataset-builder = "swepruner_dataset_builder.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

